[package]
name = "xmz_mod_touch_server"
version = "0.50.1"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Serverteil der 'xMZ-Mod-Touch'-Platform"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Server.git"
license = "GPLv2"

[[bin]]
name = "xmz_mod_touch_server"
path = "src/bin/xmz_mod_touch_server.rs"
doc = false

[[bin]]
name = "xmz_generate_config"
path = "src/bin/xmz_generate_config.rs"
doc = false

[features]
development = []

[dependencies]
env_logger = "0.4"
chrono = { git = "https://github.com/chronotope/chrono.git", features = ["serde"] }
error-chain = "0.10"
iron = "0.5.1"
libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git", version = "0.4" }
log = "0.3"
num = "0.1"
rand = "0.3"
router = "0.5.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
sysfs_gpio = "0.5"

[dependencies.clap]
version = "~2.24"
default-features = false
 # Cherry-pick the features you'd like to use
features = [ "color" ]
